examples/datalog/23_type_declarations/01_simple_alias.dl.out
Executing script: examples/datalog/23_type_declarations/01_simple_alias.dl

> .db create test_type_alias
Database 'test_type_alias' created.
Switched to database: test_type_alias
> .db use test_type_alias
Switched to database: test_type_alias
> type Email: string.
Type 'Email' declared.
> type UserId: int.
Type 'UserId' declared.
> type Score: int.
Type 'Score' declared.
> +users(id: UserId, email: Email, score: Score).
Persistent schema 'users' declared: (id: TypeRef("UserId"), email: TypeRef("Email"), score: TypeRef("Score"))
> +users[(1, "alice@example.com", 100), (2, "bob@example.com", 85)].
Script error: Line 17: Validation failed: Insert rejected for 'users': batch of 2 tuples violated constraints
